Bug 164359 - Crash on double-click of level 2 word in Impress
Summary: Crash on double-click of level 2 word in Impress
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.8.4.2 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:25.8.0 target:25.2.0.0.beta2 t...
Keywords:
: 164409 (view as bug list)
Depends on:
Blocks: Paragraph
  Show dependency treegraph
 
Reported: 2024-12-17 14:35 UTC by Miklos Vajna
Modified: 2025-01-07 07:56 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (13.30 KB, application/vnd.oasis.opendocument.presentation)
2024-12-17 14:35 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-12-17 14:35:38 UTC
Created attachment 198160 [details]
Minimal reproducer

Steps to reproduce the problem:

1) Open the attached file.

2) Double-click on the "level" in the "level 2" line

Expected result: the selection gets copied as RTF to the clipboard implicitly.

Actual result: crash.
Comment 1 Commit Notification 2024-12-18 09:06:46 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a7a81b6fbe37af938ce461e790fac517be032317

tdf#164359 editeng RTF export: track unused parent styles recursively

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-12-19 10:33:19 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/5cba5e59da2102607048025a54a34aa6145dd30c

tdf#164359 editeng RTF export: track unused parent styles recursively

It will be available in 25.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-12-19 12:46:58 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/65043a50adf8d56e1f965ec48b9609ca836ccced

Related: tdf#164359 editeng RTF export: track unused follow styles recursively

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-12-19 21:51:27 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/8e662d6878a3e38eb79ec01113984cc01df72ea5

Related: tdf#164359 editeng RTF export: track unused follow styles recursively

It will be available in 25.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 BogdanB 2025-01-02 09:16:53 UTC
*** Bug 164409 has been marked as a duplicate of this bug. ***
Comment 6 BogdanB 2025-01-03 18:17:13 UTC
Miklos, can this be backported to 24.8.5, 24.8 being a current version with a lot of reports with crashes?
Comment 7 Commit Notification 2025-01-06 06:01:48 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/968043a9479ae1ca3eee734ea012a0ae783ee4cc

tdf#164359 editeng RTF export: track unused parent styles recursively

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Miklos Vajna 2025-01-06 08:05:07 UTC
Aron kindly did that, thanks.
Comment 9 Aron Budea 2025-01-06 08:24:09 UTC
It was Xisco who backported it, I just merged the backport. The backport of the related patch to 24.8 is also on gerrit now.

Thanks for fixing, Miklos!
Comment 10 Commit Notification 2025-01-06 09:17:14 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/65e3b433b3e53e3fa308b0ba66eb8c38670eda8f

Related: tdf#164359 editeng RTF export: track unused follow styles recursively

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Miklos Vajna 2025-01-07 07:56:30 UTC
I see, thanks to both Aron & Xisco!